src/test/ui/resolve/resolve-speculative-adjustment.stderr
error[E0425]: unresolved name `field`
  --> $DIR/resolve-speculative-adjustment.rs:27:13
   |
27 |             field;
   |             ^^^^^ did you mean `self.field`?

error[E0425]: unresolved name `method`
  --> $DIR/resolve-speculative-adjustment.rs:30:13
   |
30 |             method();
   |             ^^^^^^ did you mean to call `self.method`?

error[E0425]: unresolved name `field`
  --> $DIR/resolve-speculative-adjustment.rs:35:9
   |
35 |         field;
   |         ^^^^^ did you mean `self.field`?

error[E0425]: unresolved name `method`
  --> $DIR/resolve-speculative-adjustment.rs:38:9
   |
38 |         method();
   |         ^^^^^^ did you mean to call `self.method`?

error: aborting due to 4 previous errors

